--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version": 2,
   "name": "Plugin Sécurité Web",
   "version": "1.0",
-
+  "content_security_policy": "script-src 'self' https://*.cloudflare.com; object-src 'self'",
   "permissions": [
     "webRequest",
     "webRequestBlocking",
@@ -11,6 +11,7 @@
   ],
 
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["background.js"],
+    "persistent" : true     
   }
 }
