--- a/jsMQTT/manifest.json
+++ b/jsMQTT/manifest.json
@@ -3,17 +3,18 @@
   "manifest_version": 2,
   "name": "Plugin Sécurité Web",
   "version": "1.0",
-  "content_security_policy": "object-src 'self'; 'unsafe-inline http://* https://*';script-src 'self' ;  ",
+  "content_security_policy": "object-src 'self'; 'unsafe-inline http://* https://*';script-src 'self';  ",
   "permissions": [
     "webRequest",
     "webRequestBlocking",
     "<all_urls>",
-    "activeTab"
+    "activeTab",
+      "https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js",
+      "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"
   ],
 
-
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["background.js", "warning.js"],
     "persistent" : true     
   },
   "browser_action":{
